// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Breadcrumbs Breadcrumbs 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <nav
      class="Box-xda4ls-0 Flex-hrfu3s-0 iHUNrd"
    >
      <ol
        class="Breadcrumbs__StyledOl-sc-1l75jcp-1 huaGZO"
      >
        <li
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 dYpvAr"
        >
          <a
            class="Link-sc-1lpx3d0-0 hcsgot"
            color="darkBlue"
            font-size="medium"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 cLdMxg seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 dkBAgY"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="24px"
            icon="rightArrow"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <nav
      class="Box-xda4ls-0 Flex-hrfu3s-0 iHUNrd"
    >
      <ol
        class="Breadcrumbs__StyledOl-sc-1l75jcp-1 huaGZO"
      >
        <li
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 dYpvAr"
        >
          <a
            class="Link-sc-1lpx3d0-0 hcsgot"
            color="darkBlue"
            font-size="medium"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 cLdMxg seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 dkBAgY"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="24px"
            icon="rightArrow"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 dYpvAr"
        >
          <a
            class="Link-sc-1lpx3d0-0 hcsgot"
            color="darkBlue"
            font-size="medium"
            href="/Tenants"
          >
            Tenants
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 cLdMxg seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 dkBAgY"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="24px"
            icon="rightArrow"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
      </ol>
    </nav>
  </div>
</div>
`;

exports[`Storyshots Components/Breadcrumbs without link 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <nav
      class="Box-xda4ls-0 Flex-hrfu3s-0 iHUNrd"
    >
      <ol
        class="Breadcrumbs__StyledOl-sc-1l75jcp-1 huaGZO"
      >
        <li
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 dYpvAr"
        >
          <a
            class="Link-sc-1lpx3d0-0 hcsgot"
            color="darkBlue"
            font-size="medium"
            href="/"
          >
            Home
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 cLdMxg seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 dkBAgY"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="24px"
            icon="rightArrow"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 dYpvAr"
        >
          <a
            class="Link-sc-1lpx3d0-0 hcsgot"
            color="darkBlue"
            font-size="medium"
            href="/Tenants"
          >
            Tenants
          </a>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 cLdMxg seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 dkBAgY"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="24px"
            icon="rightArrow"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
        <li
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 dYpvAr"
        >
          <p
            class="Text-sc-1wu7vpu-0 kNhVLU"
            color="darkBlue"
            font-size="medium"
          >
            Current Tenant
          </p>
        </li>
        <li
          aria-hidden="true"
          class="Breadcrumbs__StyledLi-sc-1l75jcp-0 cLdMxg seperator"
        >
          <svg
            aria-hidden="true"
            class="Icon-fc7twp-0 dkBAgY"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="24px"
            icon="rightArrow"
            viewBox="0 0 24 24"
            width="24px"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </li>
      </ol>
    </nav>
  </div>
</div>
`;
